--- a/package.json
+++ b/package.json
@@ -10,10 +10,6 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.15.2",
-    "cookie-parser": "^1.4.3",
-    "express": "^4.14.0",
-    "express-session": "^1.14.1",
-    "passport": "^0.3.2",
-    "passport-oauth2": "^1.3.0"
+    "express": "^4.14.0"
   }
 }
